--- a/Pokedex/Views/Shared/_Layout.cshtml
+++ b/Pokedex/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
 
     <main class="flex-fill d-flex align-items-center">
         @RenderBody()
-      </main>
+    </main>
 
     <footer class="py-3">
         <div class="container text-white">
@@ -67,19 +67,13 @@
                     <i class="bi bi-arrow-up-circle-fill text-danger fs-2"></i>
                 </a>
             </p>
-            <p class="mb-1">Pokédex - Versão Fabio e Natan</p>
+            <p class="mb-1">Pokédex - Versão L&D</p>
             <p>Projeto desenvolvido para as aulas de Programação para Web II</p>
         </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
-
-</html>    
-
-
-
-
-
+</html>
